Let MDSplus be built without problems by VC++ 2008

--- a/javascope/WaveDisplay.vcproj
+++ b/javascope/WaveDisplay.vcproj
@@ -120,7 +120,7 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath=".\WaveDisplay.java"
+				RelativePath=".\jScope\WaveDisplay.java"
 				>
 			</File>
 		</Filter>
