--- a/mdsobjects/java/Makefile.in
+++ b/mdsobjects/java/Makefile.in
@@ -4,7 +4,7 @@ RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 JAVADIR = @MAKEJAVADIR@classes
-JAVAC = @JAVAC@  -classpath .
+JAVAC = @JAVAC@  -classpath .:../../java/classes/jScope.jar
 JAR = @JAR@
 
 RMIC = @RMIC@
@@ -71,7 +71,8 @@ MDSplus/Uint64.java\
 MDSplus/Uint64Array.java\
 MDSplus/Uint8.java\
 MDSplus/Uint8Array.java\
-MDSplus/Window.java 
+MDSplus/Window.java \
+MDSplus/Scope.java
 
 
 
