adding MonitorCpciData.py - script to use fam to look for cpci data aquisition trigger files using fam
Updated Makefile.in to stick it in bin

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -15,7 +15,8 @@ SCRIPTS = \
 	@MAKEBINDIR@job_output \
 	@MAKEBINDIR@job_que \
 	@MAKEBINDIR@job_start \
-	@MAKEBINDIR@job_wait  
+	@MAKEBINDIR@job_wait \
+	@MAKEBINDIR@MonitorCpciData.py  
 
 
 all : @MAKEBINDIR@ \
@@ -61,4 +62,8 @@ install:
 
 @MAKEBINDIR@job_wait : job_wait
 	cp  job_wait @MAKEBINDIR@job_wait
+
+@MAKEBINDIR@MonitorCpciData.py
+	cp MonitorCpciData.py @MAKEBINDIR@MonitorCpciData.py
+
 
