--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="javamds"
 	ProjectGUID="{4CC77AA4-5CB1-43A6-AF31-99569E542CB6}"
 	RootNamespace="javamds"
@@ -404,7 +404,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\LocalProvider.h"
+				RelativePath=".\jScope_LocalDataProvider.h"
 				>
 			</File>
 			<File
