Fix build for vs8

--- a/cdu/cdushr.vcproj
+++ b/cdu/cdushr.vcproj
@@ -75,7 +75,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				LinkIncremental="1"
-				ModuleDefinitionFile="cdushr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -158,7 +158,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
-				ModuleDefinitionFile="cdushr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -242,7 +242,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				LinkIncremental="2"
-				ModuleDefinitionFile="cdushr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/cdushr.pdb"
 				SubSystem="2"
@@ -326,7 +326,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
-				ModuleDefinitionFile="cdushr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/cdushr.pdb"
 				SubSystem="2"
