--- a/idlmdsevent/idlmdsevent.vcproj
+++ b/idlmdsevent/idlmdsevent.vcproj
@@ -75,7 +75,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\idlmdsevent.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/idlmdsevent.pdb"
 				SubSystem="2"
@@ -160,7 +160,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="&quot;$(IDL_DIR)\bin\bin.x86_64\idl.lib&quot;"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\idlmdsevent.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/idlmdsevent.pdb"
 				SubSystem="2"
@@ -248,7 +248,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\idlmdsevent.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=""
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -333,7 +333,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="&quot;$(IDL_DIR)\bin\bin.x86_64\idl.lib&quot;"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\idlmdsevent.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=""
 				SubSystem="2"
 				RandomizedBaseAddress="1"
