--- a/idlsql/idlsql.vcproj
+++ b/idlsql/idlsql.vcproj
@@ -76,7 +76,7 @@
 				AdditionalDependencies="..\ntwdblib.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\IdlSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/idlsql.pdb"
 				SubSystem="2"
@@ -162,7 +162,7 @@
 				AdditionalDependencies="..\ntwdblib.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\IdlSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/idlsql.pdb"
 				SubSystem="2"
@@ -251,7 +251,7 @@
 				AdditionalDependencies="..\ntwdblib.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\IdlSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/idlsql.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -337,7 +337,7 @@
 				AdditionalDependencies="..\ntwdblib.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\IdlSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/idlsql.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
