--- a/math/math.vcproj
+++ b/math/math.vcproj
@@ -81,7 +81,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				ModuleDefinitionFile=".\MdsMath.def"
+				ModuleDefinitionFile="$(InputDir)MdsMath.def"
 				ProgramDatabaseFile="$(IntDir)/MdsMath.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -172,7 +172,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				ModuleDefinitionFile=".\MdsMath.def"
+				ModuleDefinitionFile="$(InputDir)MdsMath.def"
 				ProgramDatabaseFile="$(IntDir)/MdsMath.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -262,7 +262,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				ModuleDefinitionFile=".\MdsMath.def"
+				ModuleDefinitionFile="$(InputDir)MdsMath.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/MdsMath.pdb"
 				SubSystem="2"
@@ -353,7 +353,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				ModuleDefinitionFile=".\MdsMath.def"
+				ModuleDefinitionFile="$(InputDir)MdsMath.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/MdsMath.pdb"
 				SubSystem="2"
