--- a/matlab/matlab.vcproj
+++ b/matlab/matlab.vcproj
@@ -80,7 +80,7 @@
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\mdsipmex.def"
+				ModuleDefinitionFile="$(InputDir)mdsipmex.def"
 				ProgramDatabaseFile=".\Release/mdsipmex.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -168,7 +168,7 @@
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\mdsipmex.def"
+				ModuleDefinitionFile="$(InputDir)mdsipmex.def"
 				ProgramDatabaseFile=".\Release/mdsipmex.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -230,7 +230,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(MATLAB_DIR)\extern\include,..\include"
+				AdditionalIncludeDirectories="&quot;$(MATLAB_DIR)\extern\include&quot;,..\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;MATLAB_EXPORTS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -258,11 +258,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib $(MATLAB_DIR)\extern\lib\win32\microsoft\msvc60\libmex.lib $(MATLAB_DIR)\extern\lib\win32\microsoft\msvc60\libmx.lib"
+				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib &quot;$(MATLAB_DIR)\extern\lib\win32\microsoft\libmex.lib&quot; &quot;$(MATLAB_DIR)\extern\lib\win32\microsoft\libmx.lib&quot;"
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\mdsipmex.def"
+				ModuleDefinitionFile="$(InputDir)mdsipmex.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsipmex.pdb"
 				RandomizedBaseAddress="1"
@@ -354,7 +354,7 @@
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\mdsipmex.def"
+				ModuleDefinitionFile="$(InputDir)mdsipmex.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsipmex.pdb"
 				RandomizedBaseAddress="1"
