--- a/mdslib/mdslib_client.vcproj
+++ b/mdslib/mdslib_client.vcproj
@@ -76,7 +76,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="wsock32.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\MdsLib.def"
+				ModuleDefinitionFile="$(InputDir)MdsLib.def"
 				ProgramDatabaseFile=".\mdslib_client/Release/mdslib_client.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -161,7 +161,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\MdsLib.def"
+				ModuleDefinitionFile="$(InputDir)MdsLib.def"
 				ProgramDatabaseFile=".\mdslib_client/Release/mdslib_client.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -248,7 +248,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="wsock32.lib"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\MdsLib.def"
+				ModuleDefinitionFile="$(InputDir)MdsLib.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdslib_client.pdb"
 				SubSystem="2"
@@ -333,7 +333,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\MdsLib.def"
+				ModuleDefinitionFile="$(InputDir)MdsLib.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdslib_client.pdb"
 				SubSystem="2"
