--- a/mdssql/mdssql.vcproj
+++ b/mdssql/mdssql.vcproj
@@ -83,7 +83,7 @@
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\MdsSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdssql.pdb"
 				RandomizedBaseAddress="1"
@@ -175,7 +175,7 @@
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\MdsSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdssql.pdb"
 				RandomizedBaseAddress="1"
@@ -269,7 +269,7 @@
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\MdsSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/mdssql.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -360,7 +360,7 @@
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\MdsSql.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/mdssql.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
