--- a/remcam/remcam.vcproj
+++ b/remcam/remcam.vcproj
@@ -78,7 +78,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				OutputFile="$(OutDir)/RemCamShr.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\remcam.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -165,7 +165,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/RemCamShr.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\remcam.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -253,7 +253,7 @@
 				AdditionalOptions="/MACHINE:I386"
 				OutputFile="$(OutDir)/RemCamShr.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\remcam.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/RemCamShr.pdb"
 				SubSystem="2"
@@ -341,7 +341,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/RemCamShr.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\remcam.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/RemCamShr.pdb"
 				SubSystem="2"
