--- a/servershr/servershr.vcproj
+++ b/servershr/servershr.vcproj
@@ -77,7 +77,7 @@
 				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/mdsservershr.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\servershr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/mdsservershr.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -163,7 +163,7 @@
 				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/mdsservershr.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\servershr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/mdsservershr.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -250,7 +250,7 @@
 				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/mdsservershr.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\servershr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsservershr.pdb"
 				SubSystem="2"
@@ -336,7 +336,7 @@
 				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/mdsservershr.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\servershr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsservershr.pdb"
 				SubSystem="2"
