--- a/tdic/tdishrext.vcproj
+++ b/tdic/tdishrext.vcproj
@@ -76,7 +76,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\tdishrext.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/tdishrext.pdb"
 				RandomizedBaseAddress="1"
@@ -162,7 +162,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\tdishrext.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/tdishrext.pdb"
 				RandomizedBaseAddress="1"
@@ -250,7 +250,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\tdishrext.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/tdishrext.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -335,7 +335,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\tdishrext.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=".\Release/tdishrext.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
