--- a/mdsdcl/mdsdclshr.vcproj
+++ b/mdsdcl/mdsdclshr.vcproj
@@ -74,94 +74,9 @@
 				AdditionalOptions="/MACHINE:I386"
 				OutputFile="$(OutDir)/Mdsdcl.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile="mdsdclshr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/Mdsdcl.pdb"
-				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="..\$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="true"
-				SuppressStartupBanner="true"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Release/mdsdclshr.tlb"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;HAVE_WINDOWS_H"
-				StringPooling="true"
-				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="0"
-				AssemblerListingLocation=".\Release/"
-				CompileAs="0"
-				ShowIncludes="false"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
-				Culture="1033"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				OutputFile="$(OutDir)/Mdsdcl.dll"
-				LinkIncremental="1"
-				ModuleDefinitionFile="mdsdclshr.def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -243,7 +158,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/Mdsdcl.dll"
 				LinkIncremental="2"
-				ModuleDefinitionFile="mdsdclshr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/Mdsdcl.pdb"
 				SubSystem="2"
@@ -251,6 +166,91 @@
 				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/Mdsdcl.lib"
 				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="..\$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\Release/mdsdclshr.tlb"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories="../include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;HAVE_WINDOWS_H"
+				StringPooling="true"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
+				AssemblerListingLocation=".\Release/"
+				CompileAs="0"
+				ShowIncludes="false"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalOptions="/MACHINE:I386"
+				OutputFile="$(OutDir)/Mdsdcl.dll"
+				LinkIncremental="1"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
+				SubSystem="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -330,7 +330,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/Mdsdcl.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="mdsdclshr.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -363,6 +363,14 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="Includes"
+			>
+			<File
+				RelativePath=".\mdsdclthreadsafe.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\mdsdcl_dcl_parse.c"
 			>
@@ -428,16 +436,7 @@
 				>
 				<Tool
 					Name="VCCustomBuildTool"
-					CommandLine="SET PATH=..\win32\Debug&#x0D;&#x0A;cdu &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
-					Outputs="mdsdcl_tables.c"
-				/>
-			</FileConfiguration>
-			<FileConfiguration
-				Name="Release|Win32"
-				>
-				<Tool
-					Name="VCCustomBuildTool"
-					CommandLine="SET PATH=..\win32\Release&#x0D;&#x0A;cdu &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+					CommandLine="&quot;$(SolutionDir)$(IntDir)\cdu.exe&quot; &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 					Outputs="mdsdcl_tables.c"
 				/>
 			</FileConfiguration>
@@ -446,7 +445,16 @@
 				>
 				<Tool
 					Name="VCCustomBuildTool"
-					CommandLine="SET PATH=..\Debug&#x0D;&#x0A;cdu &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+					CommandLine="&quot;$(SolutionDir)$(IntDir)\cdu.exe&quot; &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+					Outputs="mdsdcl_tables.c"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					CommandLine="&quot;$(SolutionDir)$(IntDir)\cdu.exe&quot; &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 					Outputs="mdsdcl_tables.c"
 				/>
 			</FileConfiguration>
@@ -455,7 +463,7 @@
 				>
 				<Tool
 					Name="VCCustomBuildTool"
-					CommandLine="SET PATH=..\$(PlatformName)\$(ConfigurationName)&#x0D;&#x0A;cdu &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+					CommandLine="&quot;$(SolutionDir)$(IntDir)\cdu.exe&quot; &lt; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 					Outputs="mdsdcl_tables.c"
 				/>
 			</FileConfiguration>
