--- a/mdsmisc/mdsmisc.vcproj
+++ b/mdsmisc/mdsmisc.vcproj
@@ -66,7 +66,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
-				ModuleDefinitionFile="mdsmisc.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsmisc.pdb"
 				SubSystem="2"
@@ -144,7 +144,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
-				ModuleDefinitionFile="mdsmisc.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsmisc.pdb"
 				SubSystem="2"
@@ -225,7 +225,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile="mdsmisc.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/$(ProjectName).pdb"
 				SubSystem="2"
@@ -309,7 +309,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile="mdsmisc.def"
+				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/$(ProjectName).pdb"
 				SubSystem="2"
