Fix build for vs8

--- a/matlab/matlab.vcproj
+++ b/matlab/matlab.vcproj
@@ -393,6 +393,10 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath=".\make_mdsipmex.m"
+				>
+			</File>
+			<File
 				RelativePath=".\mdsipmex.c"
 				>
 			</File>
